duicontrolpanel (0.11.6~unreleased) unstable; urgency=low

  * Fixes: NB#224500 - Highlight shown when pressing a static label in
    Notification settings

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Thu, 03 Feb 2011 13:19:33 +0100

duicontrolpanel (0.11.5) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#220905 - Personalise settings menu looks different on
    second opening
  * Fixes: NB#220590 - Toggle button doesn't always reflect the real
    setting value
  * Fixes: NB#223192 - Context sensitive help icon is shown as if it is
    inactive.

  [ Robert Manner ]
  * Fixes some little DBus API problems when running in outprocess mode
    (on appletpage requests)
  * New: the applet can specify in its .desktop file if it has a
    mainview through DCP/HasMainView key
  * Fixes flickering at applet mainview opening in outprocess mode
  * Fixes: NB#224371 - Wrong style for scroll indicator used in Settings

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 02 Feb 2011 13:51:34 +0100

duicontrolpanel (0.11.4) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#220025 - a proposal to change #CommonXLargeHeaderInverted
    to #CommonApplicationHeaderInverted

  [ Robert Manner ]
  * Fixes: NB#220539 - toolbar at the bottom is not inverted, but
    becomes inverted when you click on a connection or phone applet
  * Fixes: NB#220868 - Constant memory usage inclureas memory leak could
    be seen in duicontrolpanel

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 21 Jan 2011 12:35:15 +0100

duicontrolpanel (0.11.3) unstable; urgency=low

  [ Robert Manner ]
  * Changes: mostused build option is working again
  * Fixes: NB#218906 - Settings app goes invisible when we tap on Feeds
    item in the Notifications view
  * Fixes: NB#218900 - settings UI is shown in applet view when tried to
    relaunch in a given scenario
  * Fixes: NB#214650 - It is not possible for an applet to disable
    itself run-time

  [ Sandor Pinter ]