@@ -9,6 +9,8 @@ include(../dcpconfig.pri)
 # we can not disable functions from the lib since our api is considered stable
 CONFIG += MOSTUSED
 
+LIBS += -lsysinfo
+
 MOSTUSED {
     DEFINES += MOSTUSED
 }
