@@ -1,9 +1,14 @@
 duicontrolpanel (0.11.6~unreleased) unstable; urgency=low
 
+  [ Sandor Pinter ]
   * Fixes: NB#224500 - Highlight shown when pressing a static label in
     Notification settings
 
- -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Thu, 03 Feb 2011 13:19:33 +0100
+  [ Robert Manner ]
+  * Fixes: NB#225300 - duicontrol panel refers to deprecated
+    /proc/component_version
+
+ -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 04 Feb 2011 13:50:17 +0100
 
 duicontrolpanel (0.11.5) unstable; urgency=low
 
